->Now genericPlotter will understand what type of TObject it should plot
->QualityControl::Plotter::DataPoint now has attributes for z and z_err respectively m_fZ and m_fZ_Err
->Style attributes moved from QualityControl::Plotter::InfoPlot to QualityControl::Plotter::InfoCanvas
->Incorporating timing correction fix in SRSHit from M. Maggi

Update: October 5th 2016
==================================================
->New make file for genericPlotter executable: MakefilePlotter.clang & MakefilePlotter.gpp
->New config file for use with genericPlotter executable: config/configPlot.cfg
->Adding new utility functions for the QualityControl::Plotter namespace found in include/PlotterUtilityFunctions.h & src/PlotterUtilityFunctions.cpp
->New utility function QualityControl::Plotter::conver2Color
->New int main() for generic executable found in src/genericPlotter.cpp
->QualityControl::Plotter::ParameterLoaderPlotter class implemented and tested
->Added new class QualityControl::Plotter::PlotterGeneric for making plots
->Added new class QualityControl::Plotter::PlotterGraph inheriting from PlotterGeneric for making plots of TGraphError objects

Update: October 4th 2016
==================================================
->Adding event unpacking/decoding and reconstruction classes from amoreSRS
->The Run Config file field of "Ana_Reco_Clusters" is renamed to "Reco_All"
->QualityControl::Uniformity::RunSetup::bAnaStep_Reco renamed to bRecoStep_All
->Minor bug fixes to SRSMapping methods: GetPlaneOrientation(), GetNbOfAPVs(), GetSizeOfPlane(), and GetPlaneIDorEtaSector()
->Minor bug fixes to SRSOutputROOT::WriteRootFile() and SRSOutputROOT::InitRootFile()
->Renamed QualityControl::Uniformity::ParameterLoaderAmoreSRS to ParameterLoaderDetector
->Added new struct QualityControl::Uniformity::RunModes to include/QualityControlSectionNames.h