@@ -7,6 +7,7 @@
     Canv_Latex_Line = '0.19,0.65, i#eta=4;i#phi=2'; #X_NDC, Y_NDC, String
     Canv_Legend_Dim_X = '0.5,0.95'; X_NDC_1, X_NDC_2
     Canv_Legend_Dim_Y = '0.14,0.40'; Y_NDC_1, Y_NDC_2
+    Canv_Legend_Draw = 'false';
     Canv_Log_XY = 'false,true'; #X, Y
     Canv_Logo_Pos = '11';
     Canv_Logo_Prelim = 'true';
